[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[dependencies]
environment.path = "../environment"
course.path = "../course"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "3.0.0"
indicatif = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.10"
tempfile = "3.8"
